Fix navbar alignment

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -71,13 +71,14 @@
 
 .navbar-nav {
   display: flex;
-  flex-direction: column; // cannot use `inherit` to get the `.navbar`s value
+  flex-direction: row; // horizontal links on large screens
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
   justify-content: center;
   align-items: center;
   @include media-breakpoint-down-lg {
+     flex-direction: column;
      margin-top: $base-margin * 4.5 !important;
      justify-content: start;
      align-items: start;
